--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ethers": "^5.0.8",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.2.0",
     "web3": "1.2.2"
   },
