--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@octokit/core": "^3.1.2",
     "axios": "^0.20.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ethers": "^5.0.8",
