--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.2.0",
+    "react-vis": "^1.11.7",
     "web3": "1.2.2"
   },
   "scripts": {
